# advant_of_code_2023

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
1_trebuchet/: pyproject.toml
1_trebuchet/src/: trebuchet.py  trebuchet_letters.py
2_cube_conundrum/: pyproject.toml
2_cube_conundrum/src/: sum_valid_games.py
3_gear_ratios/: pyproject.toml
3_gear_ratios/src/: calculate_sum_adjacent_numbers.py  gear_ratios.py
src/1_trebuchet/: sum_of_calibrations.py
src/cube_conundrum/: cube_conundrum.py  sum_valid_games.py
src/gear_ratios/: calculate_sum_adjacent_numbers.py  gear_ratio_extended.py  gear_ratios.py
src/trebuchet/: sum_of_calibrations.py  trebuchet.py  trebuchet_letters.py
test/unittests/cube_conundrum/: test_cube_conundrum_part_1.py
test/unittests/gear_ratios/: test_gear_ratios_part_2.py
test/unittests/trebuchet/: test_trebuchet.py  test_trebuchet_letters.py
tests/unittests/cube_conundrum/: test_cube_conundrum_part_1.py  test_cube_conundrum_part_2.py
tests/unittests/gear_ratios/: test_gear_ratios_part_1.py  test_gear_ratios_part_2.py
tests/unittests/trebuchet/: test_trebuchet.py  test_trebuchet_letters.py
